--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -9,7 +9,8 @@
     <link href="../Content/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="../Content/MaterialIcons.css" rel="stylesheet" />
     <link href="../Content/font-awesome.min.css" rel="stylesheet" />
-    <link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
+    <%--<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />--%>
+    <link href="../Content/jquery.dataTables.min.css" rel="stylesheet" />
     <link href="../css/boxicons.min.css" rel="stylesheet" />
 
     <style>
@@ -1294,8 +1295,8 @@
     <script src="../Scripts/vendor/jquery.nicescroll.min.js"></script>
     <script>
         var linkapi = "http://localhost:8082/api/";
-        var baseaddress = "http://localhost:44347/";
-        //var baseaddress = "http://localhost:8080/";
+        //var baseaddress = "http://localhost:44347/";
+        var baseaddress = "http://localhost:8080/";
         $(document).ready(function () {
             if (sessionStorage.getItem("userLoginUsername") != null) {
                 $('#user-login-fullname').text(" " + sessionStorage.getItem("userLoginFullname"));
