--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -1358,8 +1358,8 @@
     <script>
 
         $(document).ready(function () {
-            //var ip_url = $(location).attr("href").substring(7,).substring(0, $(location).attr("href").substring(7,).indexOf(":"));
-            //baseaddress = "http://"+ip_url+":8080/";
+            var ip_url = $(location).attr("href").substring(7,).substring(0, $(location).attr("href").substring(7,).indexOf(":"));
+            baseaddress = "http://"+ip_url+":8080/";
             if (sessionStorage.getItem("userLoginUsername") != null) {
                 var Group_user = sessionStorage.getItem("Group_Name").toLowerCase();
                 if (Group_user.includes("vùng")) {
